			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.swi.psy.uva.nl/bugzilla/
					--------------------------------------

VERSION 5.3.17 (August 2, 2004)
===============================

  * FIXED: global-variables related GC bug.  Thanks to David Reitter for
    producing an reproducable case.

  * FIXED: reconsulting a file with dynamic predicate declaration no
    longer deletes the clauses added with assert.

  * CLEANUP: Many stylistic issues to the C-source, removing warnings
    especially for Sun CC.  Richard O'Keefe.

  * ADDED: nb_setarg/3 and nb_linkarg/3, providing non-backtrackable
    assignments on terms.

  * ADDED: cycle-check in bagof/setof code handling existential bindings
    (should be an error!?).

  * ADDED: Support for cyclic terms in the recorded term representation,
    providing cyclic-safe recorda/3, findall/3, bagof/3, setof/3, exceptions
    and Prolog terms in XPCE objects.

  * ADDED: inf/infinite for stack options in create_thread/3 as well as for
    the `High' in between/3.

  * ENHANCED: use right-recursion optimisation in $e_free_variables/2
    used by bagof/3 and setof/3.  Alan Baljeu.

  * FIXED: Avoid "Loading module ... abolished: ..." messages when
    reloading discontiguous predicates.

  * FIXED: A == B if A and B are equal string objects.
    (typo when providing support for cyclic terms)  Jacques Abel.


VERSION 5.3.16 (July 21, 2004)
==============================

  * MODIFIED: print/1 behaves as write/1 instead of writeq/1.  This
    new behaviour is compatible to other Prolog systems and the
    documentation.  Lourens van der Meij.  Use write_term/[2,3]
    to get unambiguous ISO compliant printing in a specific mode.

    Affected code must be updated.  

  * MODIFIED: By default, symbols from shared objects are not made